--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,6 +3,9 @@ settings:
   cooldown: -1
 
 messages:
+  # 접두사
+  prefix: "[ WarpReloaded ] "
+
   # 워프 성공 시 뜨는 메시지
   warpComplete: "&a워프에 성공하였습니다!"
 
@@ -18,14 +21,20 @@ messages:
   # 워프 목록 표시 형식
   warpListFormat: "&b&l>&r &l%warpname%"
 
+  # 워프 목록 하단
+  warpListFooter: "/대기열 목록 [<페이지>]로 더 많은 페이지를 확인해보세요!"
+
   # 강제 워프 당했을 시 메시지
   forceTeleported: "&b&l%user%님에 의해 텔레포트 되었습니다!"
 
-  # 명령어 생성 성공 메시지
-  commandCreateSuccess: "&a성공적으로 명령어를 생성하였습니다!"
+  # 트리거 생성 성공 메시지
+  warpTriggerRegisterSuccess: "&a성공적으로 워프 트리거를 등록하였습니다!"
 
-  # 명령어 삭제 성공 메시지
-  commandDeleteSuccess: "&a성공적으로 명령어를 삭제하였습니다!"
+  # 트리거 삭제 성공 메시지
+  warpTriggerRemoveSuccess: "&a성공적으로 워프 트리거를 삭제하였습니다!"
+
+  # 트리거 생성 시 워프 이름 입력 안내 메시지
+  enterWarpTriggerName: "&a연결하실 워프의 이름을 입력해주세요!"
 
 
 errorMessages:
@@ -50,13 +59,13 @@ errorMessages:
   # 존재하지 않는 플레이어를 워프 시킬 때
   noExistPlayerWarp: "&c존재하지 않는 플레이어입니다."
 
-  # 이미 존재하는 명령어를 생성하려 할 때
-  existCommand: "&c이미 사용중인 명령어입니다."
+  # 이미 존재하는 위치에 트리거를 생성하려 할 때
+  existWarpTrigger: "&c이미 해당 위치에는 워프 트리거가 등록되어 있습니다."
 
-  # 생성되지 않은 명령어를 삭제하려 할 때
-  noExistCommand: "&c할당되지 않은 명령어입니다."
+  # 존재하지 않는 트리거를 삭제하려 할 때
+  noExistTrigger: "&c이 위치에는 워프트리거가 없습니다."
 
   # 존재하지 않는 워프를 할당하려 할 때
-  noExistWarpRegisterCommand: "&c존재하지 않는 워프입니다."
+  noExistWarpRegisterTrigger: "&c존재하지 않는 워프입니다."
 
 
