--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,13 +1,15 @@
 settings:
-  # 워프 명령어 쿨타임 ( 음수로 설정 시 쿨타임 없음 )
-  cooldown: -1
-
-  # 워프트리거 파티클 표시 여부
+ # 워프트리거 파티클 표시 여부
   showParticle: false
 
+# + -------------------------------------------------------------------------------- + #
+# | MESSAGE, ERRORMESSAGE SETTINGS ( 메시지 설정 )
+# | 유저에게 출력되지 않을 메세지는 해당 라인을 지우시거나
+# | 해당 라인의 제일 앞에 '#' 을 붙여 주석으로 처리하시면 됩니다.
+# + -------------------------------------------------------------------------------- + #
 messages:
   # 접두사
-  prefix: "[ WarpReloaded ] "
+  prefix: " &6워프 | &r"
 
   # 워프 성공 시 뜨는 메시지
   warpComplete: "&a워프에 성공하였습니다!"
@@ -47,6 +49,16 @@ messages:
 
   # 리로드 완료 메시지
   reloadComplete: "&a리로드가 완료되었습니다."
+
+  # 도움말 메시지
+  helpMessage:
+    - "&b&l === 도움말 ==="
+    - "&b/워프 생성 [<이름>]"
+    - "&b/워프 삭제 [<이름>]"
+    - "&b/워프 이동 [<워프>]"
+    - "&b/워프 이동 [<워프>] [<플레이어>]"
+    - "&b/워프 목록"
+    - "&b/워프 트리거"
 
 
 errorMessages:
